assets/menus.css
body { 
	color: #777; 
	font-size: 16px; 
	font-family: sans-serif; 
	margin: 0; 
	padding: 0; 
}
h1 { 
	margin: 0px 0px 1em 0px; 
	color: #076d6f; 
	font-size: 1.7em; 
}
h3 { 
	margin: 0px 0px 1.5em 0px;
 	color: #339999; 
 	font-size: 1.1em; 
 	font-weight: normal; 
 	letter-spacing: 2px; 
 	text-transform: uppercase; 
}
a { 
	color: #00a2ff; 
	text-decoration: none; 
}

header { 
	height: 250px; 
	background: #eee url(banner.jpg) no-repeat center; 
	background-size: cover; 
	margin-bottom: 50px; 
	position: relative; 
}
header a.logo { 
	position: absolute; 
	display: block; 
	width: 154px; 
	height: 57px; 
	background: url(logo.png) no-repeat 0 0; 
	background-size: contain; 
	z-index: 1; 
	top: 15px; 
	left: 20px; 
}
header a.logo span { 
	display: none; 
}
article { 
	width: 70%; 
	float: left; 
	margin-bottom: 75px; 
}
article div { 
	padding: 0px 40px 0px 40px; 
	border-right: 1px solid #555; 
}
aside { 
	width: 30%; 
	float: left; 
}
aside div { 
	padding: 0px 40px 0px 40px; 
}
nav { 
	background-color: rgba(0,0,0,.6); 
	position: relative; 
	padding: 45px 0px 0px 180px; 
}

/* Navigation Layout*/
nav ul {
	list-style: none;
	margin: 0;
	padding: 0;
}
nav ul::after {
	clear: both;
	content: '';
	display: block;
}
nav ul li a {
	display: inline-block;
	color: #fff;
	padding: 10px 20px;
	text-decoration: none;
	width: 125px;
}
nav ul li a:hover {
	background-color: #339999;
}
nav ul ul {
	display: none;
	position: absolute;
	top: 100%;
	background-color: rgba(0,102,102,.7);
}
nav ul li:hover > ul {
	display: block;
}
nav ul li:hover {
	background-color: rgba(0,102,102,.7);
}
nav ul ul li {
	position: relative;
}
nav ul ul ul {
	left: 95%;
	top: 5px;
}
/* First Level Menu */
nav > ul {
	padding-left: 35px;
}
nav > ul > li {
	float: left;
}
nav > ul > li > a {
	padding: 10px 20px 15px 20px;
	width: auto;
}

/* Sub link 3 */
nav .sign {
	font-weight: bold;
}
@media screen and (max-width: 750px) {
	
	header a.logo { 
		width: 120px; 
		height: 44px; 
	}
	article { 
		width: 100%; 
		float: none; 
		margin-bottom: 40px; 
	}
	article div { 
		margin: 0px 40px; 
		padding: 0px 0px 30px 0px; 
		border-right: none; 
		border-bottom: 1px solid #555; 
	}
	aside { 
		width: 100%; 
		float: none; 
	}

}

